# traffic-observability-pipeline

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  README.md  docker-compose.yml  pyproject.toml
.agents/plans/: B1-foundation.md  B2-generator-kafka.md  B3-spark-iceberg.md
.claude/: CLAUDE-template.md  PRD.md
.claude/commands/: commit.md  create-prd.md  create-rules.md  execute.md  init-project.md  plan-feature.md  prime.md
data/: servers.csv
docker/generator/: Dockerfile
docker/spark/: Dockerfile
src/common/: config.py  schemas.py  transformations.py
src/generator/: producer.py
src/streaming/: iceberg_sink.py  schemas_spark.py  stream_processor.py
tests/integration/: conftest.py  test_generator_kafka.py  test_spark_iceberg.py
tests/unit/: test_config.py  test_producer.py  test_schemas.py  test_transformations.py
