[project]
name = "traffic-observability-pipeline"
version = "0.1.0"
description = "Self-contained streaming demonstration: Kafka -> Spark Structured Streaming -> Iceberg + Postgres -> Grafana"
requires-python = ">=3.11,<3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
